--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -46,7 +46,7 @@
   <base href=".">
 </head>
 <body style="margin: 2cm; direction: ltr; max-width: 20.999cm;">
-<p class="P3">Rambow 1</p>
+<h1 class="P3">Rambow 1</h1>
 <p class="P1"><span class="T1">&bull;</span><span class="T2">Was ist
 Softwarequalit&auml;t?</span><span class="T3"> </span></p>
 <p class="P1"><span class="T4">ISO Kriterien</span><span class="T3"> </span></p>
