--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -49,7 +49,7 @@
 <h1>Rambow 1</h1>
 <p class="P1"><span class="T1">&bull;</span><span class="T2">Was ist
 Softwarequalit&auml;t?</span><span class="T3"> </span></p>
-<p class="P1"><span class="T4">ISO Kriterien</span><span class="T3"> </span></p>
+<p class="P1"><span class="T4">ISKriterien</span><span class="T3"> </span></p>
 <p class="P1"><span class="T4">- Funktionalit&auml;t</span><span
  class="T3"> </span></p>
 <p class="P1"><span class="T4">- Zuverl&auml;ssigkeit</span><span
@@ -109,7 +109,7 @@ f&uuml;r Klausur</h1>
 Schmidt,</h1>
 <p class="P8"><span class="T7">&bull;</span><span class="T9"> </span><span
  class="T15">Definition Qualit&auml;t</span></p>
-<h2>o <strong>Was
+<h2><strong>Was
 ist Quality im allgemeinen?</strong></h2>
 <p class="P10">&nbsp;</p>
 <p class="P15">Qualit&auml;t
@@ -151,7 +151,7 @@ nicht</p>
 zur Konkurrenz</p>
 <p class="P15"><span class="T17"></span></p>
 <h2><strong>o
-Wo geht Qualit&auml;t verloren?</strong></h2>
+Wgeht Qualit&auml;t verloren?</strong></h2>
 <div class="P10">
 <div style="height: 10.313cm; width: 16.999cm;" id="Grafik1" class="fr1">
 <p><img alt="" src="./Software_Qualita%CC%88t.png" height="451"
@@ -197,8 +197,7 @@ Qualit&auml;t wichtig?</p>
 <p class="P10">&nbsp;</p>
 <h2>&bull;
 Qualit&auml;tsmanagement</h2>
-<h2><strong>o
-Aufgaben eine Qualit&auml;tsbeauftragten</strong></h2>
+<h2><strong>Aufgaben eine Qualit&auml;tsbeauftragten</strong></h2>
 <p class="P10"><strong>&nbsp;</strong></p>
 <p class="P10"><strong>&nbsp;</strong></p>
 <h2>Was sind
@@ -232,7 +231,7 @@ wichtigsten<br>
 &nbsp;&nbsp;&nbsp; Ma&szlig;nahmengeh&ouml;ren.</p>
 <p class="P10">Technische Aspekte werden notorisch &uuml;berbewertet,
 obwohl der Mensch der<br>
-Schl&uuml;ssel zum Erfolg ist (Tom DeMarco und auch aus QM-Sicht!):</p>
+Schl&uuml;ssel zum Erfolg ist (Tom DeMarcund auch aus QM-Sicht!):</p>
 <p class="P10">Alle Mitarbeiter m&uuml;ssen ein
 Qualit&auml;tsbewu&szlig;tsein entwickeln (k&ouml;nnen), das<br>
 den Produktionsprozess hinzu einer optimalen Qualit&auml;t
@@ -281,46 +280,221 @@ die Ziele des Konfigurationsmanagements?</li>
 </ul>
 <h1>Normen</h1>
 <ul>
-  <li>o ISO 9001</li>
-  <li>o CMM
-(Capability Maturity Model)</li>
-  <li>&bull;
-Analytische Ma&szlig;nahmen</li>
-  <li>o Inspektion</li>
-  <li>o Fragen
-Pr&uuml;fen Sie sich selbst</li>
-  <li><span class="T10">&bull; </span><span class="T11">Metriken</span></li>
-  <li>o
-Koh&auml;sion, Kopplung</li>
-  <li>o Lines of
-Code (LOC),</li>
-  <li>o Function
-Point</li>
-  <li>o
-Zyklomatische Komplexit&auml;t</li>
-  <li>o Healsted</li>
-  <li>o
-Objekt-orientierte Metriken</li>
-  <li>o Goal
-Question Metric (GQM)</li>
-  <li>o Fragen
-Pr&uuml;fen Sie sich selbst</li>
-  <li>Was sind
-Metriken?</li>
-  <li>Welche Prozessmetriken kennen Sie?</li>
-  <li>Welche Produktmetriken kennen Sie?<br>
+  <li><strong>ISO9001</strong>
+<ul>
+      <li>Leitfaden zur Auswahl und Anwendung</li>
+      <li><em>EN ISO 9001: Acht Grundsätze des QM:</em><ol>
+    <li>Kundenorientierung<br />
+    </li>
+    <li> Führung<br />
+      </li>
+    <li> Einbeziehung der Personen<br />
+      </li>
+    <li> Prozessorientierter Ansatz<br />
+      </li>
+    <li>Systemorientierter Managementansatz<br />
+      </li>
+    <li> Kontinuierliche Verbesserung<br />
+      </li>
+    <li> Sachbezogener Entscheidungsfindungsansatz<br />
+      </li>
+    <li> Lieferantenbeziehung zu gegenseitigem Nutzen</li>
+  </ol></li>
+      <li>Anforderungen von ISO 9001
+        <ol>
+    <li>Festlegung einer Qualitätspolitik als Grundlage des gesamten<br />
+      QMSystems</li>
+    <li>Definierte Aufbau- und Ablauforganisation mit Regelung von<br />
+      Zuständigkeiten, Befugnissen und Schnittstellen</li>
+    <li>Durchführung von internen Audits</li>
+    <li>      Regelung und Durchführung von Korrekturverfahren</li>
+    <li>Definition und Dokumentation aller wichtigen Prozesse und ihrer<br />
+      Ergebnisse. Da diese Anforderung alle im Rahmen der Norm<br />
+      geforderten Prozesse umfasst, bildet sie eine wichtige Grundlage<br />
+      eines QM-Systems. Aus diesem Grund sollte einer der ersten<br />
+      Schritte bei der Einführung eines QM-Systems die Einführung eines<br />
+      Verfahrens für den Erlass verbindlicher Regelungen sein (soweit<br />
+      nicht bereits vorhanden)</li>
+    <li>Integration der obersten Führungsebene in das QM-System</li>
+    <li>Dokumentenlenkung, d.h. kontrollierte Herausgabe, Verteilung,<br />
+      Bekanntmachung und Änderung von verbindlichen Regelung </li>
+        </ol>
+      </li>
+    </ul>
   </li>
-  <li>Was ist LOC? Welche Kritikpunkte kenne Sie an LOC?<br>
+  
+  <li><strong>CMM
+    (Capability Maturity Model)</strong>
+    <ul>
+      <li>Integration hilft Software-Unternehmen bei der Verbesserung der<br />
+      eigenen Prozesse</li>
+      <li></li>
+    </ul>
   </li>
-  <li>Was sind FP? Wie funktioniert FPA?<br>
+  <li><strong>Analytische Ma&szlig;nahmen</strong></li>
+  <li><strong>Inspektion</strong></li>
+  <li><strong>Fragen
+    Pr&uuml;fen Sie sich selbst
+    
+  </strong></li>
+  </ul><h1>Metriken</h1>
+  <ul>
+  <li><strong>Was sind
+    Metriken?
+    </strong>
+    <ul>
+      <li>Metriken sind ein Indikator für Qualität. Aber Metriken<br />
+      produzieren keine Qualität!</li>
+      <li>Metriken sind eine Hilfe die Software-Qualität eines<br />
+        Softwareproduktes zu messen.<br />
+      =&gt; Produktmaße</li>
+      <li>Metriken sind eine Hilfe die Qualität eines<br />
+        Entwicklungsprozesse zu messen.<br />
+      =&gt; Prozessmaße</li>
+      <li>Metriken sind eine Hilfe die Qualität eines konkreten<br />
+        Projektes zu messen.<br />
+      =&gt; Projektmaße</li>
+    </ul>
   </li>
-  <li>Wie funktioniert die Zykomatische Komplexit&auml;t?<br>
+  <li><strong>Koh&auml;sion</strong>
+<ul>
+      <li>        ist ein Maß, wie eng zwei Funktionen, die eine<br />
+      Komponente ausführt, mit einander in Relations stehen. </li>
+    </ul>
   </li>
-  <li>Welche OO-Metriken kennen Sie?<br>
-  </li>
-  <li>Wie Funktioniert GQM?&nbsp;</li>
+  <li><strong>Kopplung</strong>
+<ul>
+      <li>ist ein Maß, wie eng zwei Komponenten mit einander in<br />
+        Relation stehen oder wie stark sie von einander<br />
+      abhängen.  </li>
 </ul>
-<p class="P12">&nbsp;</p>
-Software_Qualität.html
+  </li>
+  <li>
+    <strong>Zyklomatische Komplexit&auml;t</strong>
+<ul>
+      <li>Es stammt aus der Graphentheorie und dient dazu<br />
+      Zyklen zu finden.</li>
+      <li>Es misst direkt die Anzahl der linear unabhängigen<br />
+      Pfade durch den Source Code.</li>
+      <li>Die zyklomatische Komplexität wird berechnet, indem<br />
+      ein Graph den Kontrollfluss durchs Programm darstellt.</li>
+      <li>Die Knoten des Graphen entsprechen den Befehlen eines<br />
+      Programms</li>
+      <li>Ein direkte Kante verbindet zwei Knoten, wenn der zweite<br />
+      Befehl direkt nach dem ersten Befehl folgt.</li>
+      <li>Definition<br />
+        M = E − N + P<br />
+        wobei<br />
+        M = Zyklomatische Komplexität<br />
+        E = Anzahl der Kanten (E=Edges) des Graphen<br />
+        N = Anzahl der Knoten (N=Nodes) des Graphen<br />
+        P = Anzahl der verbundenen Komponenten<br />
+      (normalerweise P = 2).</li>
+    </ul>
+  </li>
+  <li><strong>Healsted</strong></li>
+  <li><strong>Objekt-orientierte Metriken</strong></li>
+  <li><strong>Goal
+Question Metric (GQM)</strong></li>
+  <li><strong>Welche Prozessmetriken kennen Sie?</strong>
+    <ul>
+      <li></li>
+    </ul>
+  </li>
+  <li><strong>Welche Produktmetriken kennen Sie?</strong><br>
+  </li>
+  <li><strong>Was ist LOC? 
+    </strong>
+    <ul>
+      <li>Source lines of code (SLOC) is a software metric<br />
+        used to measure the amount of code in a software<br />
+      program.</li>
+      <li>        SLOC is typically used to estimate the amount of<br />
+        effort that will be required to develop a program, as<br />
+        well as to estimate productivity or effort once the<br />
+        software is produced.</li>
+    </ul>
+  </li>
+  <li><strong>Welche Kritikpunkte kenne Sie an LOC?
+    </strong>
+    <ul>
+      <li>Mangel an Gesamtgültigkeit<br />
+        Die Programmierphase macht normalerweise 30% bis<br />
+        35% des Gesamtaufwandes aus.<br />
+      </li>
+      <li>Ungünstige Auswirkungen auf die Schätzung<br />
+        als Konsequenz des Punktes davor.<br />
+      </li>
+      <li>Mangel an Zusammenhang mit der Funktionalität<br />
+        ein (erfahrerner) Einwickler kann nur wenige Zeilen<br />
+        programmieren und doch produktiver sein (und mehr<br />
+        Funktionalität umsetzen) als ein Entwickler der mehr<br />
+        LOC erstellt.<br />
+      </li>
+      <li>Unterschiede in den Sprachen<br />
+        Im Gegensatz zu Lines of Code bleiben die Function<br />
+      Points konstant.</li>
+      <li>Weit entfernt von OO-Entwicklung<br />
+        LOC hat keine Bedeutung in der OO-Entwicklung, wo<br />
+        alles über Klassen und Objekten behandelt wird. Da das<br />
+        Objekt die wahre Repräsentation von Daten und<br />
+        Funktionalität ist und das auch für Function Point gilt,<br />
+        bleibt FPA das relevantere für objektorientierte<br />
+        Entwicklung.<br />
+      </li>
+      <li>Probleme bei mehreren Sprachen<br />
+        Heutige Software wird häufig in mehreren Sprachen        erstellt.      </li>
+      <li>Mangel an Zählstandards<br />
+        Es gibt keine Standarddefinition, was eine Codezeile ist.
+        <ul>
+          <li>            Zählen Kommentare?<br />
+          </li>
+          <li>Sind Datendeklaration eingeschlossen?<br />
+          </li>
+          <li>Was passiert, wenn ein Statement über mehrere Zeilen geht?<br />
+          </li>
+          <li>Was passiert, wenn mehrere Befehle in einer Zeile stehen?<br />
+          </li>
+          <li>Zählen Klammern?<br />
+          </li>
+        </ul>
+      </li>
+      <li>Obwohl Organisationen wie SEI and IEEE eine Richtlinien in einem<br />
+        Versuch die Zählweise zu standardisieren veröffentlicht haben, ist es<br />
+        schwierig diese in die Praxis umzusetzen, insbesondere wenn Jahr<br />
+        für Jahr neue Sprachen vorgestellt werden.<br>
+      </li>
+    </ul>
+  </li>
+  <li><strong>Was sind FP? Wie funktioniert FPA?<br>
+  </strong></li>
+  <li><strong>Wie funktioniert die Zykomatische Komplexit&auml;t?<br>
+  </strong></li>
+  <li><strong>Welche OO-Metriken kennen Sie?<br>
+  </strong></li>
+  <li><strong>Wie Funktioniert GQM?&nbsp;</strong>
+    <ul>
+      <li>GQM ist eine Anleitung, wie man systematisch<br />
+      Kriterien und Metriken bestimmt.
+    
+    <ol>
+      <li> Relevante Charakteristika der Organisation, des<br />
+        Projekts oder Produkts identifizieren, die vermessen<br />
+        werden sollen</li>
+      <li> Messziele identifizieren und eine Messplan konzipieren</li>
+      <li> Festlegen des Datensammel-Verfahrens/der Metriken</li>
+      <li> Daten sammeln/messen, analysiern und interpretieren</li>
+      <li> Eine Post-Mortem-Analyse durchführen und die Daten<br />
+        interpretieren</li>
+      <li>Erfahrungen zusammenfassen.    </li>
+    </ol>
+      <li>Besonders schwierig sind Schritte 3 bis 5</li>
+    <li>      Anfänger stellen zu viele Fragen</li>
+    <li>      Es sollte das Prinzip der schrittweisen Verfeinerung<br />
+      verfolgt werden</li>
+    <li> GQM ist ein zyklischer Prozess.</li>
+    </ul>
+  </li>
+</ul>
 </body>
 </html>
