--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -89,24 +89,21 @@
 <p >&nbsp;</p>
 <h2 style="font-weight: normal;"><strong>Wie wirkt sich fehlende
   Software-Qualit&auml;t aus?</strong></h2>
-<p >In vielen
-  kleinen, individuellen und ganz unspektakul&auml;ren
-  Katastrophen:</p>
-<p >Produkt muss
-  nachgebessert werden und wird immer </p>
-<p >teurer</p>
-<p >Kunde ist
-  unzufrieden</p>
-<p >Kunde kauft
-  nicht</p>
-<p >Kunde geht
-  zur Konkurrenz</p>
-<p ><span class="T17"></p>
 <ul>
-  <li>
-    <h2><strong>&nbsp;Wo geht Qualit&auml;t verloren?</strong></h2>
-  </li>
+  <li>In vielen
+    kleinen, individuellen und ganz unspektakul&auml;ren
+    Katastrophen:</li>
+  <li>Produkt muss
+    nachgebessert werden und wird immer teurer</li>
+  <li>Kunde ist
+    unzufrieden</li>
+  <li>Kunde kauft
+    nicht</li>
+  <li>Kunde geht
+    zur Konkurrenz</li>
 </ul>
+<h2>Wo geht Qualit&auml;t verloren?</h2> 
+</p>
 <div >
   <div style="height: 10.313cm; width: 16.999cm;" id="Grafik1" class="fr1">
     <p><img alt="" src="./Software_Qualita%CC%88t.png" height="451"
@@ -174,58 +171,41 @@
     benutzerorientierten Sichtweise entsprechen.</li>
 </ul>
 <h2>Was sind
-  Qualit&auml;tsziele?<br>
-</h2>
+  Qualit&auml;tsziele?</h2>
 <ul>
-  <li>
-    <ul>
-      <ul>
-        <li>&nbsp;&nbsp;&nbsp; Ein Qualit&auml;tsziel ist ein
-          angestrebtes Merkmal.</li>
-      </ul>
-      <ul>
-        <li>&nbsp; &nbsp; Konstruktives Ziel muss es sein, fehlerfreie
-          Software-<br>
-          &nbsp;&nbsp;&nbsp; Komponenten zu entwickeln.</li>
-        <li>&nbsp; &nbsp; Analytische Ziel muss es sein, die
-          Fehlerfreiheit einer<br>
-          &nbsp;&nbsp;&nbsp; Software-Komponente nachzuweisen bzw.<br>
-          <p>&nbsp;&nbsp;&nbsp; vorhandene Fehler zu finden.<span
+  <li>&nbsp;&nbsp;&nbsp; Ein Qualit&auml;tsziel ist ein
+    angestrebtes Merkmal.</li>
+  <li>&nbsp; &nbsp; Konstruktives Ziel muss es sein, fehlerfreie
+    Software-<br>
+    &nbsp;&nbsp;&nbsp; Komponenten zu entwickeln.</li>
+  <li>&nbsp; &nbsp; Analytische Ziel muss es sein, die
+    Fehlerfreiheit einer<br>
+    &nbsp;&nbsp;&nbsp; Software-Komponente nachzuweisen bzw.<br>
+    <p>&nbsp;&nbsp;&nbsp; vorhandene Fehler zu finden.<span
  style="font-weight: bold;"></p>
-        </li>
-      </ul>
-    </ul>
-    <h2 style="margin-left: 0px; width: 907px;">Was sind
-      Qualit&auml;tsindikatoren bzw. Metriken?</h2>
-    <h2><br>
-    </h2>
-  </li>
-  <li>
-    <ul>
-      <li>Die einzelnen Kriterien werden durch<span
- style="font-weight: bold;">&nbsp;Qualit&auml;tsindikatoren bzw.
-        Metriken messbar bzw.<span style="font-weight: bold;"> bewertbar
-        gemacht.</li>
-      <li>Indikatoren sind ausgewiesene Eigenschaften eines<br>
-        Software-Produkts, die zu den Qualit&auml;tsmerkmalen in<br>
-        Beziehung gesetzt werden k&ouml;nnen</li>
-      <li>Beispiele:</li>
-      <ul>
-        <li>Pfadl&auml;nge</li>
-      </ul>
-      <ul>
-        <li>modularer Aufbau</li>
-      </ul>
-      <ul>
-        <li>Programmstrukturen</li>
-      </ul>
-      <ul>
-        <li>Kommentare</li>
-      </ul>
-    </ul>
-    <h2></h2>
   </li>
 </ul>
+  <h2>Was sind
+    Qualit&auml;tsindikatoren bzw. Metriken?</h2>
+  <br>
+<ul>
+    <li>Die einzelnen Kriterien werden durch<span
+ style="font-weight: bold;">&nbsp;Qualit&auml;tsindikatoren bzw.
+      Metriken messbar bzw.<span style="font-weight: bold;"> bewertbar
+      gemacht.</li>
+    <li>Indikatoren sind ausgewiesene Eigenschaften eines<br>
+      Software-Produkts, die zu den Qualit&auml;tsmerkmalen in<br>
+      Beziehung gesetzt werden k&ouml;nnen</li>
+    <li>Beispiele:
+      <ul>
+        <li>Pfadl&auml;nge</li>
+        <li>modularer Aufbau</li>
+        <li>Programmstrukturen</li>
+        <li>Kommentare</li>
+      </ul>
+    </li>
+</ul>
+
 <h2>Welche Qualit&auml;tsma&szlig;nahmen kennen Sie?</h2>
 <p ></p>
 <p ><span style="font-weight: bold;">Konstruktive
@@ -291,8 +271,7 @@
     aggregation of software designated for configurations<br>
     management and is treated as a single entity in the<br>
     SCM process.&rdquo;</li>
-  <li>eindeutige Konfigurationselemente</li>
-  <li>
+  <li>eindeutige Konfigurationselemente
     <ul>
       <li>Quelltext</li>
       <li>Anforderungsdokumente</li>
@@ -306,7 +285,7 @@
       <li>Meta- und Konfigurationsdaten</li>
       <li>Benutzerdokumentation</li>
       <li>Installationsanleitung</li>
-      <li>Release-Notes</li>
+      <li>Release-Notes  </li>
     </ul>
   </li>
 </ul>
@@ -342,8 +321,7 @@ enth&auml;lt:<br>
 Namenkonventionen<br>
 Richtlinien zur Codeformatierung<br>
 Installationsanleitungen etc.<br>
-Beschreibung der Konfigurationselemente<br>
-etc.<br>
+Beschreibung der Konfigurationselemente etc.<br>
 erleichtert die Einarbeitung neuer Teammitglieder<br>
 kann in neuen Projekten wieder verwendet werden.
 <ul>
@@ -471,7 +449,7 @@ kann in neuen Projekten wieder verwendet werden.
       <li>Die Knoten des Graphen entsprechen den Befehlen eines<br />
         Programms</li>
       <li>Ein direkte Kante verbindet zwei Knoten, wenn der zweite<br />
-        Befehl direkt nach dem ersten Befehl folgt.</li>
+        Befehl direkt nach dem ersten Befehl folgt.      </li>
       <li>Definition<br />
         M = E − N + P<br />
         wobei<br />
