--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -258,12 +258,20 @@
 <h2>Vorbereitung</h2>
 <ul>
   <li>F&uuml;r KM sind folgende vorbereitende Schritte notwendig:<br>
-    Notwendigkeiten eines KM feststellen<br>
-    Management überzeugen<br>
-    Konfigurationselemente festlegen<br>
-    Werkzeug ausw&auml;hlen<br>
-    Konfigurationsmanagementplan/-handbuch erstellen<br>
-    Projektstruktur festlegen</li>
+    <ul>
+      <li>Notwendigkeiten eines KM feststellen<br>
+      </li>
+      <li>Management überzeugen<br>
+      </li>
+      <li>Konfigurationselemente festlegen<br>
+      </li>
+      <li>Werkzeug ausw&auml;hlen<br>
+      </li>
+      <li>Konfigurationsmanagementplan/-handbuch erstellen<br>
+      </li>
+      <li>Projektstruktur festlegen</li>
+    </ul>
+  </li>
 </ul>
 <h2>Konfigurationselemente</h2>
 <ul>
@@ -326,9 +334,9 @@ erleichtert die Einarbeitung neuer Teammitglieder<br>
 kann in neuen Projekten wieder verwendet werden.
 <ul>
   <li>Projektstruktur</li>
-  <li>&nbsp;Repository</li>
-  <li>&nbsp;Versionierung</li>
-  <li>&nbsp;Releasemanagement</li>
+  <li>Repository</li>
+  <li>Versionierung</li>
+  <li>Releasemanagement</li>
   <li>SVN</li>
   <li>Was sind
     die Ziele des Konfigurationsmanagements?</li>
