neue fragen in den folien gefunden

--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -418,6 +418,17 @@ ist Handbuch als KM-Plan eingeschr&auml;nkt auf:<br>
     </ul>
   </li>
   <li><strong>SVN</strong></li>
+  <li><strong>Wie kann nun ein Releaseplan vom Repository<br />
+    unterstützt werden?<br />
+  </strong></li>
+  <li><strong>Welche Versionsnummer gehört zu welcher<br />
+    Releasenummer?<br />
+  </strong></li>
+  <li><strong>Warum soll (nicht) parallel gearbeitet werden?<br />
+  </strong></li>
+  <li><strong>Wie kann parallel gearbeitet werden?<br />
+    </strong></li>
+  <li><strong>Was ist ein Entwicklungspfad?</strong></li>
   <li><strong>Was sind
     die Ziele des Konfigurationsmanagements?</strong></li>
   <li><strong>Welche Konfigurationselemente kennen Sie?</strong></li>
