--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -407,8 +407,55 @@ ist Handbuch als KM-Plan eingeschr&auml;nkt auf:<br>
         gekennzeichnet.<br />
       </li>
       <li>Releasenummer ≠ Versionsnummer des
-        Repositories!      </li>
-      <li>Release x.y.z
+        Repositories!       </li>
+    </ul>
+  </li>
+  <li><strong>SVN</strong>
+    <ul>
+      <li>Einrichten des Repositories<br />
+        <ul>
+          <li>Erstellen eines Repositories<br />
+            </li>
+          <li>Vergabe der Zugriffsrechte<br />
+            </li>
+          <li>Anlegen der Struktur im Repository<br />
+            </li>
+        </ul>
+      </li>
+      <li>Arbeiten mit dem Repository<br />
+        <ul>
+          <li>Add (neue Dateien hinzufügen)<br />
+            </li>
+          <li>Edit<br />
+            </li>
+          <li>Update<br />
+            </li>
+          <li>Commit<br />
+            </li>
+          <li>Sperren<br />
+            </li>
+        </ul>
+      </li>
+      <li>Arbeiten mit der Versionshistorie<br />
+      </li>
+      <li>Umgang mit Konflikten<br />
+        <ul>
+          <li>Div<br />
+            </li>
+          <li>merge<br />
+            </li>
+        </ul>
+      </li>
+      <li>Trunk, Tagging und Branching</li>
+    </ul>
+  </li>
+  <li><strong>Wie kann nun ein Releaseplan vom Repository<br />
+    unterstützt werden?<br />
+  </strong></li>
+  <li><strong>Welche Versionsnummer gehört zu welcher<br />
+    Releasenummer?</strong>
+    <ul>
+      <li>Release x.y.z 
         <ul>
           <li>Hauptrelease (x)</li>
           <li>Wartungsrelease (y)</li>
@@ -417,18 +464,28 @@ ist Handbuch als KM-Plan eingeschr&auml;nkt auf:<br>
       </li>
     </ul>
   </li>
-  <li><strong>SVN</strong></li>
-  <li><strong>Wie kann nun ein Releaseplan vom Repository<br />
-    unterstützt werden?<br />
-  </strong></li>
-  <li><strong>Welche Versionsnummer gehört zu welcher<br />
-    Releasenummer?<br />
-  </strong></li>
   <li><strong>Warum soll (nicht) parallel gearbeitet werden?<br />
   </strong></li>
-  <li><strong>Wie kann parallel gearbeitet werden?<br />
-    </strong></li>
-  <li><strong>Was ist ein Entwicklungspfad?</strong></li>
+  <li><strong>Wie kann parallel gearbeitet werden?</strong>
+    <ul>
+      <li>branches</li>
+    </ul>
+  </li>
+  <li><strong>Was ist ein Entwicklungspfad?</strong>
+    <ul>
+      <li>Bei einem linearer Entwicklungspfad können während der<br />
+        Vorbereitungsphase durch den Code-Freeze eventuell einige<br />
+        Teammitglieder nicht arbeiten.<br />
+      </li>
+      <li>Um parallel arbeiten zu können, verzeigt man die Entwicklungspfade<br />
+        in so genannte Branches.<br />
+      </li>
+      <li>Der Hauptentwicklungspfad wird auch Trunk genannt.<br />
+      </li>
+      <li>Am Ende einer Baseline werden Branch und Trunk wieder<br />
+        zusammengeführt.</li>
+    </ul>
+  </li>
   <li><strong>Was sind
     die Ziele des Konfigurationsmanagements?</strong></li>
   <li><strong>Welche Konfigurationselemente kennen Sie?</strong></li>
