--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -495,12 +495,24 @@ ist Handbuch als KM-Plan eingeschr&auml;nkt auf:<br>
   </strong></li>
   <li><strong>Wie setzt sich eine Releasenummer zusammen?<br>
   </strong></li>
-  <li><strong>Was ist im Gegensatz zur Releasenummer eine<br>
+  <li><strong>Was ist im Gegensatz zur Releasenummer eine Versionsnummer?</strong><br>
   </strong></li>
-  <li><strong>Versionsnummer?<br>
-  </strong></li>
-  <li><strong>Wozu dienen Tags?<br>
-  </strong></li>
+  <li><strong>Wozu dienen Tags?</strong>
+    <ul>
+      <li>Die Versionsnummern der Repositories sind schlecht<br />
+        zu merken, daher bieten die Repositories Tags<br />
+        (Bezeichner)<br />
+      </li>
+      <li>Ein Tag markiert die zu einem bestimmten Zeitpunkt<br />
+        gültige Version aller Dateien im Repository mit einer<br />
+        frei wählbaren Bezeichnung.<br />
+      </li>
+      <li>Tatsächlich werden alle Dateien bei SVN in ein<br />
+        entsprechendes Tag-Verzeichnis unter dem<br />
+        Bezeichner kopiert.<strong><br>
+      </strong></li>
+    </ul>
+  </li>
   <li><strong>Was ist ein Trunk?</strong><br>
   </li>
 </ul>
